

2005.January.16 (0.9.15)


  * uncatagorized and messy:
    -----------------------
    * Splash screen appears earlier, along with the version info and cursor.

    * Normal start-up time reduced by 11.4 seconds by splitting out font
      loading into a separate thread. You only wait if you want the text tool.
      (450 MHz Mac G4, 7200 RPM ATA disk, about 200 font files)

  * Stamp tool improvements:
    ------------------------
    * Greatly improved stamp outlining (to avoid empty rows or columns
      and other artifacts) by using a thick stippled pattern.
      Albert Cahalan <albert@users.sf.net>

    * Stamp tinting code changed.  Stamp ".dat" files may include
      "tinter=anyhue", "tinter=narrow", "tinter=normal" or "tinter=vector",
      describing how the contents of the stamp should be tinted. (See README)
      Albert Cahalan <albert@users.sf.net>

    * Added "scale" keyword (in stamp ".dat" files) for high-resolution stamp
      images.  (Allows stamps to be made larger without losing quality.)
      Albert Cahalan <albert@users.sf.net>

    * More range for stamp sizes. Can't hang off edge in both dimensions.
      Albert Cahalan <albert@users.sf.net>
 
  * New Magic tools:
    ----------------
    * "Smudge" (pushes the colors around like wet paint)
    * "Grass" (makes grass, the painless way)
    * "Bricks" (makes bricks, the painless way)
      Albert Cahalan <albert@users.sf.net>
  
    * "Darken" (opposite of "Fade"),
    * "Tint" (changes colors of parts of the picture), and
    * "Cartoon" (makes parts of the picture look like a cartoon or comic)
      Bill Kendrick <bill@newbreedsoftware.com>
  
  * Magic tool improvements:
    ------------------------
    * Magic blur effect now gamma-aware, circular, and modifying all points
      within the brush instead of just 25% of them.
      Albert Cahalan <albert@users.sf.net>
  
    * Magic blocks effect now gamma-aware and using all 16 (not just 4)
      source pixels.